syntax = "proto3";

package hall;

service HallService {
	rpc GetAllHalls(GetAllHallsRequest) returns (GetAllHallsResponse) {}
	rpc GetHall(GetHallRequest) returns (GetHallResponse){}
	rpc AddHall(AddHallRequest) returns (AddHallResponse){}
	rpc RemoveHall(RemoveHallRequest) returns (RemoveHallResponse){}
}

message Hall{
	int64 Id = 1;
	string Name = 2;
	int64 Rows = 3;
	int64 Columns = 4;
}


message GetAllHallsRequest{}

message GetAllHallsResponse{
	repeated Hall Halls = 1;
}

message GetHallRequest{
	int64 Id = 1;
}

message GetHallResponse{
	Hall Hall = 1;
}

message AddHallRequest{
	Hall Hall = 1;
}

message AddHallResponse{
	int64 Id = 1;
}

message RemoveHallRequest{
	int64 Id = 1;
}

message RemoveHallResponse{}
